Notification bar is moved to top center of viewport instead of the window. Only problem is that it doesn't continue to stay glued to top of viewport after it shows up. The apparent solution of using fixed CSS positioning didn't work and I think the only would be to have some sort of scroll listener that would continuously shift the notification bar as the user scrolled.

--- a/client/src/webEditor/client/view/notification.css
+++ b/client/src/webEditor/client/view/notification.css
@@ -7,6 +7,7 @@
 	margin-left:auto;
 	margin-right:auto;
 	width:40%;
+	z-index:999;
 }
 
 .error {
